[package]
name = "grave_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
envy = "0.4.2"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
